<resources>
    <string name="app_name">Time Master</string>
    <string name="btnStartText">Start</string>
    <string name="btnStoptText">Stop</string>
    <string name="btnResettText">Reset</string>
    <string name="btnNextAct">Timer</string>
    <string name="btnMainAct">Stop Watch</string>
    <string name="zeroText">00:00:00</string>
    <string name="cdzeroText">00:00</string>
    <string name="stpTxt">Stop</string>

</resources>