<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/setTextarea"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
    <EditText
        android:id="@+id/txtHour"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="#1499dd"
        android:textSize="70sp"
        android:ems="10"
        android:text="00"
        android:inputType="numberDecimal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textSize="50sp"
        android:textColor="#1499dd"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        />

    <EditText
       android:id="@+id/txtMinute"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:textSize="70sp"
        android:textColor="#1499dd"
       android:ems="10"
       android:text="00"
       android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="50sp"
            android:textColor="#1499dd"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            />

        <EditText
            android:id="@+id/txtSec"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="70sp"
            android:textColor="#1499dd"
            android:ems="10"
            android:text="00"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:gravity="center"
        >
    <TextView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zeroText"
        android:textSize="70sp"
        android:textColor="#1499dd"
        android:visibility="gone"
        android:layout_marginBottom="20dp" />
    <Button
        android:id="@+id/btnStart"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#1499dd"
        android:textColor="@color/white"
        android:text="@string/btnStartText"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btnStopwatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/btnMainAct" />

    </LinearLayout>

</RelativeLayout>